Java class path maybe too long when invoking sbt.ForkMain?